[tool.poetry]
name = "home_dash_api"
version = "0.1.0"
description = ""
authors = ["James Best <jamesbest.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
